--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 Django = "^4.1.2"
 django-environ = "^0.9.0"
 pytz = "^2022.4"
+django-model-utils = "^4.2.0"
 
 
 [build-system]
