--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ Django = "^4.1.2"
 django-environ = "^0.9.0"
 pytz = "^2022.4"
 django-model-utils = "^4.2.0"
+python-dateutil = "^2.8.2"
 
 
 [build-system]
