--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ django-environ = "^0.9.0"
 pytz = "^2022.4"
 django-model-utils = "^4.2.0"
 python-dateutil = "^2.8.2"
+Pillow = "^9.2.0"
+django-imagekit = "^4.1.0"
 
 
 [build-system]
