--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ django-model-utils = "^4.2.0"
 python-dateutil = "^2.8.2"
 Pillow = "^9.2.0"
 django-imagekit = "^4.1.0"
+setuptools = "^65.5.0"
 
 
 [build-system]
