--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ python-dateutil = "^2.8.2"
 Pillow = "^9.2.0"
 django-imagekit = "^4.1.0"
 setuptools = "^65.5.0"
+djangorestframework = "^3.14.0"
+Markdown = "^3.4.1"
+django-filter = "^22.1"
 
 
 [build-system]
