feat: add new dependencies, remove login view, reset the database and delete apps migrations

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ setuptools = "^65.5.0"
 djangorestframework = "^3.14.0"
 Markdown = "^3.4.1"
 django-filter = "^22.1"
+django-extensions = "^3.2.1"
+django-rest-knox = "^4.2.0"
 
 
 [build-system]
