--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ Markdown = "^3.4.1"
 django-filter = "^22.1"
 django-extensions = "^3.2.1"
 django-rest-knox = "^4.2.0"
+pytest-django = "^4.5.2"
 
 
 [build-system]
