--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ django-filter = "^22.1"
 django-extensions = "^3.2.1"
 django-rest-knox = "^4.2.0"
 pytest-django = "^4.5.2"
+celery = "^5.2.7"
+redis = "^4.3.4"
 
 
 [build-system]
