--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ django-rest-knox = "^4.2.0"
 pytest-django = "^4.5.2"
 celery = "^5.2.7"
 redis = "^4.3.4"
+django-celery-results = "^2.4.0"
 
 
 [build-system]
