--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pytest-django = "^4.5.2"
 celery = "^5.2.7"
 redis = "^4.3.4"
 django-celery-results = "^2.4.0"
+django-celery-beat = "^2.4.0"
 
 
 [build-system]
