--- a/requirements.txt
+++ b/requirements.txt
@@ -129,6 +129,12 @@ deprecated==1.2.13 ; python_version >= "3.10" and python_version < "4.0" \
 django-appconf==1.0.5 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:ae9f864ee1958c815a965ed63b3fba4874eec13de10236ba063a788f9a17389d \
     --hash=sha256:be3db0be6c81fa84742000b89a81c016d70ae66a7ccb620cdef592b1f1a6aaa4
+django-celery-beat==2.4.0 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:58efe9460e4373a241c2b3d839518f29a28ae19bc80a8dba20da204c7ea50613 \
+    --hash=sha256:a20b7a7857daaa2eea1f4cfefb2a965456800216f5763c6cf918c2e21372b3c8
+django-celery-results==2.4.0 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:75aa51970db5691cbf242c6a0ff50c8cdf419e265cd0e9b772335d06436c4b99 \
+    --hash=sha256:be91307c02fbbf0dda21993c3001c60edb74595444ccd6ad696552fe3689e85b
 django-environ==0.9.0 ; python_version >= "3.10" and python_version < "4" \
     --hash=sha256:bff5381533056328c9ac02f71790bd5bf1cea81b1beeb648f28b81c9e83e0a21 \
     --hash=sha256:f21a5ef8cc603da1870bbf9a09b7e5577ab5f6da451b843dbcc721a7bca6b3d9
@@ -147,6 +153,9 @@ django-model-utils==4.2.0 ; python_version >= "3.10" and python_version < "4.0" 
 django-rest-knox==4.2.0 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:4595f1dc23d6e41af7939e5f2d8fdaf6ade0a74a656218e7b56683db5566fcc9 \
     --hash=sha256:62b8e374a44cd4e9617eaefe27c915b301bf224fa6550633d3013d3f9f415113
+django-timezone-field==5.0 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:15746ed367a5a32eda76cfa2886eeec1de8cda79f519b7c5e12f87ed7cdbd663 \
+    --hash=sha256:199f211082eeac7e83563929b8ce41399c1c0f00dfc2f36bc00bea381027eaaa
 django==4.1.2 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:26dc24f99c8956374a054bcbf58aab8dc0cad2e6ac82b0fe036b752c00eee793 \
     --hash=sha256:b8d843714810ab88d59344507d4447be8b2cf12a49031363b6eed9f1b9b2280f
@@ -248,6 +257,8 @@ pytest-django==4.5.2 ; python_version >= "3.10" and python_version < "4.0" \
 pytest==7.2.0 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:892f933d339f068883b6fd5a459f03d85bfcb355e4981e146d2c7616c21fef71 \
     --hash=sha256:c4014eb40e10f11f355ad4e3c2fb2c6c6d1919c73f3b5a433de4708202cade59
+python-crontab==2.6.0 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:1e35ed7a3cdc3100545b43e196d34754e6551e7f95e4caebbe0e1c0ca41c2f1b
 python-dateutil==2.8.2 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:0123cacc1627ae19ddf3c27a5de5bd67ee4586fbdd6440d9748f8abb483d3e86 \
     --hash=sha256:961d03dc3453ebbc59dbdea9e4e11c5651520a876d0f4db161e8674aae935da9
@@ -269,7 +280,7 @@ sqlparse==0.4.3 ; python_version >= "3.10" and python_version < "4.0" \
 tomli==2.0.1 ; python_version >= "3.10" and python_version < "3.11" \
     --hash=sha256:939de3e7a6161af0c887ef91b7d41a53e7c5a1ca976325f429cb46ea9bc30ecc \
     --hash=sha256:de526c12914f0c550d15924c62d72abc48d6fe7364aa87328337a31007fe8a4f
-tzdata==2022.6 ; python_version >= "3.10" and python_version < "4.0" and sys_platform == "win32" \
+tzdata==2022.6 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:04a680bdc5b15750c39c12a448885a51134a27ec9af83667663f0b3a1bf3f342 \
     --hash=sha256:91f11db4503385928c15598c98573e3af07e7229181bee5375bd30f1695ddcae
 vine==5.0.0 ; python_version >= "3.10" and python_version < "4.0" \
